# swarm-ollama

./: LAPORAN.md  README.md  requirements-dev.txt  requirements.txt  setup.cfg
airline/: main.py
airline/evals/eval_results/: flight_modification_evals.json
examples/airline/configs/: agents.py  tools.py
examples/airline/evals/: eval_utils.py
examples/airline/swarm_ollama/: types.py
examples/triage_agent/: agents.py  evals.py  evals_util.py  run.py
logs/: session_20240402-112114.json  session_20240402-112443.json  session_20240402-112456.json  session_20240402-112501.json  session_20240402-113222.json  session_20240402-113415.json  session_20240425-135655.json  session_20240425-135657.json  session_20240425-135728.json  session_20240425-140427.json  session_20240425-140502.json  session_20240425-140516.json  session_20240425-140553.json  session_20240425-141416.json  session_20240425-141509.json  session_20240425-141709.json  session_20240425-145129.json  session_20240425-145324.json  session_20240425-145907.json  session_20240425-145930.json  session_20240425-150004.json  session_20240425-150040.json  session_20240425-155814.json  session_20240425-172809.json  session_20240425-211732.json  session_20240425-211813.json  session_20240425-211942.json  session_20240425-212341.json  session_20240425-212431.json  session_20240425-212748.json  session_20240425-213023.json
swarm_ollama/: __init__.py  core.py
swarm_ollama/repl/: repl.py
tests/: mock_client.py  test_core.py  test_util.py
tests/test_runs/: test_20240402-113647.json
(+4 files in other folders)
