[metadata]
name = swarm-ollama
version = 0.1.0
author = Yash Gadbail, OpenAI Solutions
description = A lightweight, stateless multi-agent orchestration framework with ollama.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    numpy
    ollama
    openai>=1.33.0
    pytest
    requests
    tqdm
    pre-commit
    instructor
python_requires = >=3.10

[tool.autopep8]
max_line_length = 120
ignore = E501,W6
in-place = true
recursive = true
aggressive = 3
